
  - Unicode characters in spec files are no longer supported by
    default. LibYAML counts indices by character when reporting the
    offsets used to re-extract the Lua code fragments (i.e. without
    YAML neline folding) that Specl uses to generate correct line-
    numbers in error-messages.  Lua string operations require byte
    offsets, which are incompatible.

** Bug fixes:

  - Help2man is no longer required to install specl from the
    distribution tarball.


* Noteworthy changes in release 8 (2013-06-26) [stable]

** New features:

  - Can now be installed directly from a release tarball by `luarocks`.
    No need to run `./configure` or `make`, unless you want to install
    to a custom location, or do not use LuaRocks.

  - A new 'all_of' adaptor for any matcher:

     expect (mytable).should_contain.all_of {x, y, z}

  - 'contain' matcher handles std.object module derived objects by
    coercing them to tables.

  - 'equal' matcher performs a deep comparison of std.object module
    derived objects' contents.

  - `./bootstrap` runs slowly again with 4800 lines of code
    reintroduced required to automatically manage Slingshot files with
    new `bootstrap.slingshot`.  This doesn't have any direct effect on
    users, except that the Slingshot managed release process is much
    more robust, reducing the chances you'll end up with a still-born
    release.

** Bug fixes:

  - Avoid 'nan%' divide-by-zero error output from report formatter.

  - Built in report formatter displays argument strings to pending
    calls from examples consistently.

** Incompatible changes:

  - API change in matchers, generalizing the former `format_any_of` to
    `format_alternatives`, with a new `adaptor` parameter for use with
    additional matcher adaptors.

  - API change in both matchers.concat and matchers.reformat, each of
    which now take an additional `adaptor` argument, which can be
    passed in from `format_alternatives` as received so that the